* Jifty::RightsFrom is a generalization of BTDT::ACLFromTask that lets you specify the acls as coming from any related column's object
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@161 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 name: Jifty
-version: 0.1134969992
+version: 0.1135122420
 license: unknown
 distribution_type: module
 requires:
@@ -35,6 +35,7 @@ requires:
   Hash::Merge: 0
   Hook::LexWrap: 0
   Jifty::DBI: 0
+  JSON: 0
   Log::Log4perl: 0
   Locale::Maketext::Simple: 0
   Module::Pluggable: 2.95
