* Fork'd JSON.pm temporarily  * Added Jifty::Action::Record::Delete  * More docs checkpointing (Up to continuation!)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@197 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 name: Jifty
-version: 0.1135381515
+version: 0.1135387493
 license: unknown
 distribution_type: module
 tests: t/*.t t/*/t/*.t
@@ -8,12 +8,12 @@ requires:
   Apache::Session: 0
   App::CLI: 0
   Cache::Cache: 0
+  Carp: 0
   CGI::Cookie: 0
   CGI: 0
   Class::Accessor: 0
   Clone: 0
   Cwd: 0
-  Data::JavaScript::Anon: 0
   Data::Page: 0
   Digest::MD5: 0
   DBD::SQLite: 0
