* Missing dep, tuning down logger
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@207 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 name: Jifty
-version: 0.1135413778
+version: 0.1135415006
 license: unknown
 distribution_type: module
 tests: t/*.t t/*/t/*.t
@@ -56,6 +56,7 @@ requires:
   Test::HTTP::Server::Simple: 0.02
   Test::WWW::Mechanize: 0
   Time::ParseDate: 0
+  Time::HiRes: 0
   UNIVERSAL::require: 0
   URI: 0
   WWW::Mechanize: 1.12
