* A bit more fleshing out of the Dispatcher
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@442 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -59,6 +59,7 @@ requires:
   Time::HiRes: 0
   Time::ParseDate: 0
   UNIVERSAL::require: 0
+  UNIVERSAL: 0
   URI: 0
   WWW::Mechanize: 1.12
   XML::Writer: 0
