--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 distribution_type: module
-generated_by: Module::Install version 0.520
+generated_by: Module::Install version 0.510
 license: unknown
 name: Jifty
 no_index:
@@ -46,10 +46,10 @@ requires:
   Locale::Maketext::Simple: 0
   Log::Log4perl: 0
   Math::BigInt: 0
-  Module::Install: 0.50
+  Module::Install::Admin: 0.50
   Module::Pluggable: 2.95
   Module::Refresh: 0
-  Pod::Simple::Text: 0
+  Pod::Simple: 0
   Pod::Usage: 0
   Scalar::Util: 0
   String::Koremutake: 0
