* More topsy-turvy-ness.  We no longer are a H::S::S::Mason, as that    constructed the mason object at the wrong time.  * Dispatcher all goes through Jifty::Request  * Don't need to worry about subrequests hitting    jifty->web->handle_request anymore
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@528 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -24,6 +24,7 @@ requires:
   Email::Send: 1.99_01
   Email::Simple: 0
   Email::Simple::Creator: 0
+  Encode: 0
   Exporter: 0
   File::Basename: 0
   File::Copy: 0
@@ -37,7 +38,6 @@ requires:
   HTML::Mason::Plugin: 0
   HTTP::Cookies: 0
   HTTP::Server::Simple: 0.10
-  HTTP::Server::Simple::Mason: 0.09
   HTTP::Server::Simple::Recorder: 0
   Hash::Merge: 0
   Hook::LexWrap: 0
