--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,23 @@
 distribution_type: module
-generated_by: Module::Install version 0.520
+generated_by: Module::Install version 0.610
 license: unknown
 name: Jifty
-no_index:
-  directory:
+no_index: 
+  directory: 
     - inc
     - t
-requires:
+requires: 
   Apache::Session: 0
   App::CLI: 0.03
-  CGI: 0
-  CGI::Cookie: 0
   Cache::Cache: 0
   Calendar::Simple: 0
-  Carp: 0
   Class::Accessor: 0
   Class::Container: 0
   Clone: 0
-  Cwd: 0
+  Compress::Zlib: 0
   DBD::SQLite: 0
   Data::Page: 0
+  Date::Manip: 0
   Digest::MD5: 0
   Email::Folder: 0
   Email::LocalDelivery: 0
@@ -27,32 +25,31 @@ requires:
   Email::Simple: 0
   Email::Simple::Creator: 0
   Encode: 0
-  Exporter: 0
-  File::Basename: 0
-  File::Copy: 0
-  File::Find: 0
+  File::Find::Rule: 0
+  File::MMagic: 0
   File::ShareDir: 0
-  File::Spec: 0
-  FindBin: 0
-  Getopt::Long: 0
   HTML::Entities: 0
   HTML::Mason: 1.3101
   HTML::Mason::Plugin: 0
   HTTP::Cookies: 0
+  HTTP::Date: 0
   HTTP::Server::Simple: 0.10
   HTTP::Server::Simple::Recorder: 0
   Hash::Merge: 0
   Hook::LexWrap: 0
-  Jifty::DBI: 0.06
-  Locale::Maketext::Simple: 0
+  JSON::Syck: 0.1
+  Jifty::DBI: 0.16
+  LWP::UserAgent: 0
+  Locale::Maketext::Extract: 0.20
+  Locale::Maketext::Lexicon: 0.60
   Log::Log4perl: 0
-  Math::BigInt: 0
+  MIME::Types: 0
+  Module::CoreList: 0
   Module::Install::Admin: 0.50
   Module::Pluggable: 2.95
-  Module::Refresh: 0
+  Module::Refresh: 0.09
   Params::Validate: 0
   Pod::Simple: 0
-  Pod::Usage: 0
   Scalar::Util: 0
   String::Koremutake: 0
   Test::Base: 0.44
@@ -62,14 +59,13 @@ requires:
   Test::Pod::Coverage: 0
   Test::WWW::Mechanize: 0
   Time::HiRes: 0
-  Time::ParseDate: 0
-  UNIVERSAL: 0
   UNIVERSAL::require: 0
   URI: 0
   WWW::Mechanize: 1.12
   XML::Writer: 0
   XML::XPath: 0
+  YAML::Syck: 0.41
   perl: 5.8.3
   version: 0
 tests: t/*.t t/*/t/*.t
-version: 0.60213
+version: 0.60321
