--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,16 @@
+build_requires: 
+  ExtUtils::MakeMaker: 6.11
 distribution_type: module
-generated_by: Module::Install version 0.610
-license: unknown
+generated_by: Module::Install version 0.620
+license: Perl
 name: Jifty
 no_index: 
   directory: 
     - inc
     - t
+  package: 
+    - DB
 requires: 
-  Apache::Session: 0
   App::CLI: 0.03
   Cache::Cache: 0
   Calendar::Simple: 0
@@ -15,16 +18,15 @@ requires:
   Class::Container: 0
   Clone: 0
   Compress::Zlib: 0
-  DBD::SQLite: 0
+  DBD::SQLite: 1.11
   Data::Page: 0
   Date::Manip: 0
-  Digest::MD5: 0
+  DateTime: 0
   Email::Folder: 0
   Email::LocalDelivery: 0
   Email::Send: 1.99_01
   Email::Simple: 0
   Email::Simple::Creator: 0
-  Encode: 0
   File::Find::Rule: 0
   File::MMagic: 0
   File::ShareDir: 0
@@ -37,7 +39,7 @@ requires:
   HTTP::Server::Simple::Recorder: 0
   Hash::Merge: 0
   Hook::LexWrap: 0
-  JSON::Syck: 0.1
+  JSON::Syck: 0.12
   Jifty::DBI: 0.16
   LWP::UserAgent: 0
   Locale::Maketext::Extract: 0.20
@@ -50,7 +52,6 @@ requires:
   Module::Refresh: 0.09
   Params::Validate: 0
   Pod::Simple: 0
-  Scalar::Util: 0
   String::Koremutake: 0
   Test::Base: 0.44
   Test::HTML::Lint: 0
@@ -58,14 +59,13 @@ requires:
   Test::More: 0.62
   Test::Pod::Coverage: 0
   Test::WWW::Mechanize: 0
-  Time::HiRes: 0
   UNIVERSAL::require: 0
   URI: 0
   WWW::Mechanize: 1.12
   XML::Writer: 0
   XML::XPath: 0
-  YAML::Syck: 0.41
+  YAML::Syck: 0.44
   perl: 5.8.3
   version: 0
 tests: t/*.t t/*/t/*.t
-version: 0.60321
+version: 0.60507
