* Added support for context menus (at the code level. next up, at the CSS level)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/jifty-jsan@1088 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/plugins/EditInPlace/META.yml
+++ b/plugins/EditInPlace/META.yml
@@ -1,5 +1,7 @@
+build_requires: 
+  ExtUtils::MakeMaker: 6.11
 distribution_type: module
-generated_by: Module::Install version 0.610
+generated_by: Module::Install version 0.620
 license: unknown
 name: Jifty-Plugin-EditInPlace
 no_index: 
