* Be explicit when you *don't* take an action
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1188 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -62,6 +62,7 @@ requires:
   UNIVERSAL::require: 0
   URI: 0
   WWW::Mechanize: 1.12
+  XML::Simple: 0
   XML::Writer: 0
   XML::XPath: 0
   YAML::Syck: 0.45
