* 'last_rule' now aborts only the current stage -- thus, last_rule from a 'before' block will *NOT* prevent the RUN stage from happening! This is a *BACKWARDS-INCOMPATIBILE CHANGE*, but fixes the dispatcher to agree with its docs  * 'abort' is the correct call to skip straight to the cleanup block.  * This allows the edit in place plugin to 'claim' its path and protect it from access control in the app's 'before' blocks
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1201 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -12,6 +12,7 @@ no_index:
     - DB
 requires: 
   App::CLI: 0.03
+  CSS::Squish: 0.01
   Cache::Cache: 0
   Calendar::Simple: 0
   Class::Accessor: 0
