--- a/META.yml
+++ b/META.yml
@@ -17,7 +17,7 @@ requires:
   Calendar::Simple: 0
   Class::Accessor: 0
   Class::Container: 0
-  Clone: 0
+  Class::Data::Inheritable: 0
   Compress::Zlib: 0
   DBD::SQLite: 1.11
   Data::Page: 0
@@ -59,7 +59,7 @@ requires:
   Test::HTTP::Server::Simple: 0.02
   Test::More: 0.62
   Test::Pod::Coverage: 0
-  Test::WWW::Mechanize: 0
+  Test::WWW::Mechanize: 1.04
   UNIVERSAL::require: 0
   URI: 0
   WWW::Mechanize: 1.12
