--- a/debian/control
+++ b/debian/control
@@ -51,9 +51,10 @@ Depends: ${perl:Depends}, libjifty-dbi-perl, libapp-cli-perl
  libcgi-cookie-splitter-perl, libclass-accessor-named-perl,
  libclass-container-perl, libclass-data-inheritable-perl,
  libcompress-zlib-perl, libcss-squish-perl (>> 0.05),
- libcrypt-cbc-perl, libdate-manip-perl, libfile-find-rule-perl,
- libfile-mmagic-perl, libfile-sharedir-perl, libhash-merge-perl,
- libhtml-lint-perl, libhtml-mason-perl (>> 1.31),
+ libcrypt-cbc-perl, libdatetime-format-builder-perl,
+ libdatetime-format-iso8601-perl, libdate-manip-perl,
+ libfile-find-rule-perl, libfile-mmagic-perl, libfile-sharedir-perl,
+ libhash-merge-perl, libhtml-lint-perl, libhtml-mason-perl (>> 1.31),
  libhttp-server-simple-perl (>> 0.20),
  libhttp-server-simple-recorder-perl, liblog-log4perl-perl,
  liblocale-maketext-lexicon-perl (>> 0.60),
@@ -64,7 +65,7 @@ Depends: ${perl:Depends}, libjifty-dbi-perl, libapp-cli-perl
  libobject-declare-perl, libscalar-defer-perl,
  libstring-koremutake-perl, libspiffy-perl, libwww-mechanize-perl (>>
  1.12), libversion-perl, libxml-simple-perl, libxml-writer-perl,
- libxml-xpath-perl, libyaml-syck-perl (>> 0.67),
+ libxml-xpath-perl, libyaml-perl, libyaml-syck-perl (>> 0.67),
 Description: Jifty perl libraries
  Yet another web framework.
  .
