--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,12 @@
 build_requires: 
   ExtUtils::MakeMaker: 6.11
 distribution_type: module
-generated_by: Module::Install version 0.630
+generated_by: Module::Install version 0.640
 license: Perl
 name: Jifty
 no_index: 
   directory: 
+    - t
     - doc
     - inc
     - t
@@ -31,14 +32,18 @@ requires:
   DateTime: 0
   Email::Folder: 0
   Email::LocalDelivery: 0
+  Email::MIME: 0
+  Email::MIME::ContentType: 0
+  Email::MIME::Creator: 0
   Email::Send: 1.99_01
   Email::Simple: 0
   Email::Simple::Creator: 0
   Exporter::Lite: 0
   File::Find::Rule: 0
   File::MMagic: 0
-  File::ShareDir: 0
+  File::ShareDir: 0.04
   HTML::Entities: 0
+  HTML::Lint: 0
   HTML::Mason: 1.3101
   HTML::Mason::Plugin: 0
   HTTP::Cookies: 0
@@ -62,6 +67,7 @@ requires:
   Object::Declare: 0.13
   PAR::Dist::FromCPAN: 0
   Params::Validate: 0
+  PerlIO::gzip: 0
   Pod::Simple: 0
   Scalar::Defer: 0.06
   String::Koremutake: 0
@@ -81,4 +87,4 @@ requires:
   perl: 5.8.3
   version: 0
 tests: t/*.t t/*/t/*.t
-version: 0.60722
+version: 0.60728
