--- a/META.yml
+++ b/META.yml
@@ -13,6 +13,21 @@ no_index:
   package: 
     - DB
     - inc
+recommends: 
+  Class::Accessor::Named: 0
+  DBD::SQLite: 0
+  Devel::Cover: 0
+  Module::CoreList: 0
+  Module::Install::Admin: 0.50
+  Module::Refresh: 0.09
+  PAR::Dist::FromCPAN: 0
+  Test::Base: 0.44
+  Test::HTML::Lint: 0
+  Test::HTTP::Server::Simple: 0.02
+  Test::More: 0.62
+  Test::Pod::Coverage: 0
+  Test::WWW::Mechanize: 1.04
+  WWW::Mechanize: 1.12
 requires: 
   App::CLI: 0.03
   CGI::Cookie::Splitter: 0
@@ -20,13 +35,11 @@ requires:
   Cache::Cache: 0
   Calendar::Simple: 0
   Class::Accessor: 0
-  Class::Accessor::Named: 0
   Class::Container: 0
   Class::Data::Inheritable: 0
   Compress::Zlib: 0
   Crypt::CBC: 0
   Crypt::Rijndael: 0
-  DBD::SQLite: 1.11
   Data::Page: 0
   Date::Manip: 0
   DateTime: 0
@@ -59,27 +72,17 @@ requires:
   Locale::Maketext::Lexicon: 0.60
   Log::Log4perl: 0
   MIME::Types: 0
-  Module::CoreList: 0
-  Module::Install::Admin: 0.50
   Module::Pluggable: 2.95
-  Module::Refresh: 0.09
   Module::ScanDeps: 0
   Object::Declare: 0.13
-  PAR::Dist::FromCPAN: 0
   Params::Validate: 0
   PerlIO::gzip: 0
   Pod::Simple: 0
   Scalar::Defer: 0.06
+  Shell::Command: 0
   String::Koremutake: 0
-  Test::Base: 0.44
-  Test::HTML::Lint: 0
-  Test::HTTP::Server::Simple: 0.02
-  Test::More: 0.62
-  Test::Pod::Coverage: 0
-  Test::WWW::Mechanize: 1.04
   UNIVERSAL::require: 0
   URI: 0
-  WWW::Mechanize: 1.12
   XML::Simple: 0
   XML::Writer: 0
   XML::XPath: 0
