add dependency on libextutils-command-perl to debian control file
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1976 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/debian/control
+++ b/debian/control
@@ -53,8 +53,9 @@ Depends: ${perl:Depends}, libjifty-dbi-perl, libapp-cli-perl
  libcompress-zlib-perl, libcss-squish-perl (>> 0.05),
  libcrypt-cbc-perl, libdatetime-format-builder-perl,
  libdatetime-format-iso8601-perl, libdate-manip-perl,
- libfile-find-rule-perl, libfile-mmagic-perl, libfile-sharedir-perl,
- libhash-merge-perl, libhtml-lint-perl, libhtml-mason-perl (>> 1.31),
+ libextutils-command-perl (>> 1.11), libfile-find-rule-perl,
+ libfile-mmagic-perl, libfile-sharedir-perl, libhash-merge-perl,
+ libhtml-lint-perl, libhtml-mason-perl (>> 1.31),
  libhttp-server-simple-perl (>> 0.20),
  libhttp-server-simple-recorder-perl, liblog-log4perl-perl,
  liblocale-maketext-lexicon-perl (>> 0.60),
