--- a/META.yml
+++ b/META.yml
@@ -79,6 +79,7 @@ requires:
   Params::Validate: 0
   PerlIO::gzip: 0
   Pod::Simple: 0
+  SQL::ReservedWords: 0
   Scalar::Defer: 0.06
   Shell::Command: 0
   String::Koremutake: 0
