* Makefile.PL typo. Spotted by David Adler
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2028 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/plugins/Login/META.yml
+++ b/plugins/Login/META.yml
@@ -1,8 +1,8 @@
 build_requires: 
   ExtUtils::MakeMaker: 6.11
 distribution_type: module
-generated_by: Module::Install version 0.64
-license: Perl
+generated_by: Module::Install version 0.63
+license: unknown
 name: Jifty-Plugin-Login
 no_index: 
   directory: 
