* Added sample apps and design docs from the PubSub/Comet hackathon
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2073 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -67,6 +67,7 @@ requires:
   HTTP::Server::Simple::Recorder: 0
   Hash::Merge: 0
   Hook::LexWrap: 0
+  IPC::PubSub: 0.11
   JSON::Syck: 0.14
   Jifty::DBI: 0.25
   LWP::UserAgent: 0
@@ -93,4 +94,4 @@ requires:
   perl: 5.8.3
   version: 0
 tests: t/*.t t/*/t/*.t
-version: 0.60912
+version: 0.61025
