* Gotta turn on pubsub to get the pubsub behaviour for now
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2089 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/examples/Clock/etc/config.yml
+++ b/examples/Clock/etc/config.yml
@@ -3,6 +3,8 @@ framework:
   AdminMode: 1
   ApplicationClass: Clock
   ApplicationName: Clock
+  PubSub:
+    Enable: TRUE
   Database:
     CheckSchema: 1
     Database: clock
