* Ping: Turn PubSub on in config.yml
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2099 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/examples/Ping/etc/config.yml
+++ b/examples/Ping/etc/config.yml
@@ -3,6 +3,8 @@ framework:
   AdminMode: 1
   ApplicationClass: Ping
   ApplicationName: Ping
+  PubSub:
+    Enable: 1
   Database: 
     CheckSchema: 1
     Database: ping
