* Update MANIFEST and META.yml
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2130 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/plugins/Login/META.yml
+++ b/plugins/Login/META.yml
@@ -2,7 +2,7 @@ build_requires:
   ExtUtils::MakeMaker: 6.11
 distribution_type: module
 generated_by: Module::Install version 0.63
-license: unknown
+license: Perl
 name: Jifty-Plugin-Login
 no_index: 
   directory: 
