* Skip html files when looking for dependencies. This may cause us to miss some modules used only from within mason, but it will stop falsely detecting lines that start with the word "use" in docs.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2243 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -42,6 +42,7 @@ requires:
   Compress::Zlib: 0
   Crypt::CBC: 0
   Crypt::Rijndael: 0
+  DBD::SQLite: 1.11
   Data::Page: 0
   Date::Manip: 0
   DateTime: 0
