* The new maxlenght support had unbalanced quotes causing generated html to not validate
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2320 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -25,6 +25,8 @@ recommends:
   Test::Base: 0.44
   Test::HTML::Lint: 0
   Test::HTTP::Server::Simple: 0.02
+  Test::MockModule: 0.05
+  Test::MockObject: 1.07
   Test::More: 0.62
   Test::Pod::Coverage: 0
   Test::WWW::Mechanize: 1.04
