debian packages : add libtest-mockobject-perl libtest-mockmodule-perl in recommands packages (for new snapshot on jiftysvn repository)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2344 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/debian/control
+++ b/debian/control
@@ -81,7 +81,8 @@ Recommends: libmodule-install-perl,
  libtest-pod-coverage-perl, libtest-www-mechanize-perl
  (>> 1.04), libwww-mechanize-perl (>> 1.12),
  libclass-accessor-named-perl, libdevel-cover-perl,
- libmodule-install-perl, libpar-dist-fromcpan-perl
+ libmodule-install-perl, libpar-dist-fromcpan-perl, libtest-mockobject-perl,
+ libtest-mockmodule-perl
 Description: Jifty perl libraries
  Yet another web framework.
  .
