* Support for the new IPC::PubSub, which should work properly on mysql
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2369 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -70,7 +70,7 @@ requires:
   HTTP::Server::Simple::Recorder: 0
   Hash::Merge: 0
   Hook::LexWrap: 0
-  IPC::PubSub: 0.11
+  IPC::PubSub: 0.22
   JSON::Syck: 0.15
   Jifty::DBI: 0.29
   LWP::UserAgent: 0
@@ -99,4 +99,4 @@ requires:
   perl: 5.8.3
   version: 0
 tests: t/*.t t/*/t/*.t
-version: 0.61123_01
+version: 0.61210
