* bin/jifty covered sigterm in a way that could cause zombie processes uner fastcgi
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2437 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/examples/MyWeblog/etc/config.yml
+++ b/examples/MyWeblog/etc/config.yml
@@ -11,7 +11,7 @@ framework:
     Password: ''
     RecordBaseClass: Jifty::DBI::Record::Cachable
     User: ''
-    Version: 0.0.1
+    Version: 0.0.3
   DevelMode: 1
   L10N: 
     PoDir: share/po
@@ -19,7 +19,8 @@ framework:
   Mailer: Sendmail
   MailerArgs: []
 
-  Plugins: []
+  Plugins:
+   - Login: {}
 
   PubSub: 
     Backend: Memcached
