debian packaging change for new release
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2512 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/debian/control
+++ b/debian/control
@@ -53,7 +53,7 @@ Depends: ${perl:Depends},Depends: ${perl:Depends},perl (>> 5.8.3),
  perl-modules, libcgi-cookie-splitter-perl,
  libcrypt-cbc-perl, libcrypt-rijndael-perl,
  libcompress-zlib-perl, libcss-squish-perl (>> 0.05), 
- libdbd-sqlite3-perl, libdata-page-perl,
+ libdbd-sqlite3-perl, libdata-page-perl, libossp-uuid-perl,
  libdatetime-perl, libdate-manip-perl, libemail-folder-perl,
  libemail-localdelivery-perl, libemail-mime-perl,
  libemail-mime-creator-perl, libemail-mime-contenttype-perl,
@@ -62,11 +62,11 @@ Depends: ${perl:Depends},Depends: ${perl:Depends},perl (>> 5.8.3),
  libfile-find-rule-perl, libfile-mmagic-perl,
  libfile-sharedir-perl (>> 0.04), libhtml-parser-perl,
  libhtml-lint-perl, libhtml-mason-perl (>> 1.3101), 
- libwww-perl, libhttp-server-simple-perl (>> 0.20), 
+ libwww-perl, libhttp-server-simple-perl (>> 0.26), 
  libhttp-server-simple-recorder-perl, libhash-merge-perl, libhook-lexwrap-perl,
  libipc-pubsub-perl (>> 0.22), libjifty-dbi-perl (>> 0.29),
  liblocale-maketext-lexicon-perl, liblog-log4perl-perl,
- libmime-types-perl, libmodule-pluggable-perl (>> 2.95),
+ libmime-types-perl, libmodule-pluggable-perl (>> 3.1),
  libmodule-corelist-perl, libmodule-refresh-perl,
  libmodule-scandeps-perl, libobject-declare-perl (>> 0.13),
  libparams-validate-perl, libscalar-defer-perl (>> 0.06),
