fix missing dep
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2513 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/debian/control
+++ b/debian/control
@@ -50,7 +50,7 @@ Depends: ${perl:Depends},Depends: ${perl:Depends},perl (>> 5.8.3),
  libapp-cli-perl (>> 0.03), libcache-cache-perl,
  libcalendar-simple-perl, libclass-accessor-perl,
  libclass-container-perl, libclass-data-inheritable-perl,
- perl-modules, libcgi-cookie-splitter-perl,
+ perl-modules, libcgi-cookie-splitter-perl, libcgi-simple-perl
  libcrypt-cbc-perl, libcrypt-rijndael-perl,
  libcompress-zlib-perl, libcss-squish-perl (>> 0.05), 
  libdbd-sqlite3-perl, libdata-page-perl, libossp-uuid-perl,
