* Introduce Jifty::Handle::SVK stub for versioned handles.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/virtual-models@2713 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-DatabaseBackedModels/etc/config.yml
+++ b/t/TestApp-DatabaseBackedModels/etc/config.yml
@@ -10,6 +10,7 @@ framework:
     Host: localhost
     Password: ''
     RecordBaseClass: Jifty::DBI::Record::Cachable
+    HandleClass: Jifty::Handle::SVK
     User: ''
     Version: 0.0.1
   DevelMode: 1
