* Ditch Jifty::Handle::SVK in favour of the better-named Jifty::Record::Versioned.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/virtual-models@2730 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-DatabaseBackedModels/etc/config.yml
+++ b/t/TestApp-DatabaseBackedModels/etc/config.yml
@@ -9,8 +9,7 @@ framework:
     Driver: SQLite
     Host: localhost
     Password: ''
-    RecordBaseClass: Jifty::DBI::Record::Cachable
-    HandleClass: Jifty::Handle::SVK
+    RecordBaseClass: Jifty::Record::Versioned
     User: ''
     Version: 0.0.1
   DevelMode: 1
