--- a/t/TestApp-DatabaseBackedModels/etc/config.yml
+++ b/t/TestApp-DatabaseBackedModels/etc/config.yml
@@ -15,7 +15,7 @@ framework:
   DevelMode: 1
   L10N: 
     PoDir: share/po
-  LogLevel: INFO
+  LogLevel: DEBUG
   Mailer: Sendmail
   MailerArgs: []
 
